# Lifelong-Shopify-Integration

./: README.md  pyproject.toml
.github/workflows/: ci.yml
lifelong_shopify_integration/: hooks.py  modules.txt  patches.txt
lifelong_shopify_integration/fixtures/: custom_field.json
lifelong_shopify_integration/lifelong_shopify_integration/customizations/: custom_fields.py  item.py
lifelong_shopify_integration/lifelong_shopify_integration/customizations/item/: item.py
lifelong_shopify_integration/lifelong_shopify_integration/customizations/item/doc_events/: utility_functions.py
lifelong_shopify_integration/lifelong_shopify_integration/doctype/server_hosting/: server_hosting.js  server_hosting.json  server_hosting.py  test_server_hosting.py
lifelong_shopify_integration/lifelong_shopify_integration/doctype/shopify_information/: shopify_information.json  shopify_information.py
lifelong_shopify_integration/lifelong_shopify_integration/doctype/shopify_product_sync/: shopify_product_sync.js  shopify_product_sync.json  shopify_product_sync.py  test_shopify_product_sync.py
lifelong_shopify_integration/lifelong_shopify_integration/doctype/sync_status_log/: sync_status_log.js  sync_status_log.json  sync_status_log.py  test_sync_status_log.py
lifelong_shopify_integration/lifelong_shopify_integration/patches/: update_price.py  update_price1.py  update_price_80.py
lifelong_shopify_integration/lifelong_shopify_integration/utils/: custom_fields.py  sync_price_list.py
lifelong_shopify_integration/lifelong_shopify_integration/utils/doc_events/: utility_functions.py
